<resources>
    <string name="app_name">Simple Notification</string>
    <string name="btnToast">Toast</string>
    <string name="btnStatusBar">StatusBar</string>
    <string name="btnDialog">Dialog</string>
    <string name="btnAlert">Alert Dialog</string>
    <string name="btnDatePicker">Date Picker Dialog</string>
    <string name="btnTimePicker">Time Picker Dialog</string>
    <string name="btnProgress">Progress Dialog</string>
    <string name="btnCustom">Custom Dialog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AlertTitle">Alert!!!</string>
    <string name="AlertMessage">!!Warning!!</string>
    <string name="AlertPositive">Ok</string>
    <string name="AlertNegative">Cancel</string>
    <string name="progressTitle">Please Wait...</string>
    <string name="progressMessage">Loading...</string>
    <string name="edtUserName">UserName</string>
    <string name="edtPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="notiTitle">Title</string>
</resources>
